first beta release
